<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Piztor</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="settings">设置</string>
    <string name="search">搜索</string>
    <string name="fetch">更新</string>
    <string name="checkin">签到</string>
    <string name="focus">定位</string>
    <string name="show_sex">按性别</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="show_team">按班级</string>
    <string name="all">All</string>
    <string name="mine">Mine</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_settings">Settings</string>
    <string name="password">密码</string>
    <string name="username">用户名</string>
    <string name="login">登录</string>
    <string name="desc">desc</string>
    <string name="logout">注销</string>
    <string name="update_info">修改密码</string>
    <string name="subscribe_info">关注信息</string>
    <string name="change">关注信息</string>
    <string name="title_activity_subscribesettings">SubscribeSettings</string>
    <string name="title_activity_subscribe_settings">SubscribeSettings</string>
    <string name="title_activity_update_info">UpdateInfo</string>
    <string name="cancel">取消</string>
    <string name="remove">移除</string>
    <string name="company">连队</string>
    <string name="section">班级</string>
    <string name="add">添加</string>
    <string name="GPSrefreshrate">定位刷新率 每</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="submit">提交</string>
    <string name="colormode">着色方式</string>
    <string name="save">保存</string>
    <string name="locatemode">定位方式</string>
    <string name="gps_first">GPS优先</string>
    <string name="network_first">网络优先</string>

</resources>
