<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
<RelativeLayout 
    android:orientation="vertical" 
    android:id="@+id/login_layout"
    android:background="@android:color/black" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent">

    
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/black"
    android:gravity="center_horizontal"
    android:orientation="vertical" 
    android:layout_marginTop="16dip">
    
    <ImageView
        android:id="@+id/main_headbar_img"
        android:layout_width="180dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/title_logo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="30dip"
        android:textColor="#FFFFFF"/>
    </LinearLayout>

    <LinearLayout 
        android:orientation="vertical" 
        android:id="@+id/user_layout" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:layout_marginTop="260.0dip" 
        android:layout_marginLeft="28.0dip" 
        android:layout_marginRight="28.0dip">
        <EditText 
            android:textSize="16.0sp" 
            android:textColor="@android:color/white"
            android:textColorHint="#ff666666" 
            android:id="@+id/user_id" 
            android:background="#00ffffff" 
            android:paddingLeft="12.0dip" 
            android:layout_width="fill_parent" 
            android:layout_height="44.0dip" 
            android:hint="@string/username"
            android:maxLines="1" 
            android:maxLength="16"/>
        <View 
            android:background="#ffc0c3c4" 
            android:layout_width="fill_parent" 
            android:layout_height="1.0px" 
            android:layout_marginLeft="1.0px" 
            android:layout_marginRight="1.0px" />
        <EditText 
            android:textSize="16.0sp" 
            android:textColor="@android:color/white" 
            android:textColorHint="#ff666666"
            android:gravity="center_vertical" 
            android:id="@+id/user_pass" 
            android:background="#00ffffff" 
            android:paddingLeft="12.0dip" 
            android:layout_width="fill_parent" 
            android:layout_height="44.0dip" 
            android:hint="@string/password" 
            android:maxLines="1" 
            android:maxLength="16" 
            android:inputType="textPassword" />
    </LinearLayout>
    

    <Button 
        android:textSize="18.0sp" 
        android:textColor="#ff333333" 
        android:gravity="center" 
        android:id="@+id/login_btn_login"
        android:paddingTop="5.0dip" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginLeft="70.0dip"
        android:layout_marginRight="70.0dip" 
        android:layout_marginTop="40.0dip" 
        android:text="@string/login"    
        android:layout_below="@id/user_layout" />
    
</RelativeLayout>
</ScrollView>