<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="10dip">
    <TextView 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:id="@+id/textView1" 
        android:text="TextView" 
        android:textSize="20dip"
        android:layout_alignParentBottom="true" 
        android:layout_centerHorizontal="true" 
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="10dip"/>
	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:gravity="center"
	    android:orientation="horizontal">
	    <EditText
	        android:layout_width="80dip"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_marginLeft="10dip"
	        android:textSize="20dip"
	        android:hint="@string/company"
	        android:phoneNumber="true"
	 		android:id="@+id/subscribe_company"/>
	    <EditText
	        android:layout_width="80dip"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dip"
	        android:layout_toRightOf="@+id/subscribe_company"
	        android:textSize="20dip"
	        android:hint="@string/section"
	        android:phoneNumber="true"
	        android:id="@+id/subscribe_section"/>
	    <Button 
        	android:layout_width="100dip"
        	android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:layout_marginRight="10dip"
        	android:text="@string/add" 
        	android:textColor="#FFFFFF"
        	android:background="#0F9D58"
        	android:textSize="20dip"
      		android:padding="10dip"
        	android:id="@+id/button_add"/>
	</RelativeLayout>
    
    <LinearLayout 
        android:id="@+id/linearLayout1" 
        android:orientation="vertical" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        >
        <ListView 
            android:id="@+id/listView1" 
            android:layout_width="fill_parent" 
            android:layout_height="fill_parent" 
            android:layout_weight="0.69"
            android:focusable="true">
        </ListView>
    </LinearLayout>
</LinearLayout>
